src/components/NavigationBar/NavigationBar.css
.navbar {
  width: 100%;
  height: 8rem;

  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;

  background: #FFFFFF;
}

.navbar .container {
  width: 100%;
  max-width: 1280px;
  
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.navbar .container .nav-item {
  font-size: 1.6rem;
  text-decoration: none;
  color: #222222;
}

.navbar .container .nav-item:hover {
  color: #3174F1;
}

.navbar .container .nav-left {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}

.navbar .container .nav-left .logo {
  height: 100%;
  max-height: 6rem;
}

.navbar .container .nav-right {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
}

.navbar .container .nav-right .nav-item.avatar {
  width: 5rem;
  height: 5rem;
  display: flex;
}

.navbar .container .nav-right .nav-item.avatar img {
  border-radius: 100%;
}

